Updates to contact details

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 					<div class="col-sm-4 wow bounceInUp">
 						<div class="profile-item">
 							<i class="fa fa-phone"></i>
-							<h5>(+91) 988-685-7552</h5>
+							<h5>425-998-0837</h5>
 						</div>
 					</div>
 
 					<div class="col-sm-4 wow bounceInRight">
 						<div class="profile-item">
 							<i class="fa fa-map-marker"></i>
-							<h5>108/3, 15th Cross, Bangalore, India</h5>
+							<h5>Lemon AVE , Walnut, CA - 91789 </h5>
 						</div>
 					</div>
 
