--- a/index.html
+++ b/index.html
@@ -574,8 +574,8 @@
 						<p>Its our passion to rediscover the art of delivering software !</p>
 
 						<ul class="icon-list">
-							<li><i class="fa fa-fw fa-map-marker"></i>108/3 15th Cross, Vyalikaval, Bangalore, India</li>
-							<li><i class="fa fa-fw fa-phone"></i>+91 - 988 685 7552</li>
+							<li><i class="fa fa-fw fa-map-marker"></i>Lemon AVE , Walnut, CA - 91789</li>
+							<li><i class="fa fa-fw fa-phone"></i>425-998-0837</li>
 							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">suresh.nelamangala@gmail.com</a></li>
 							<li><i class="fa fa-fw fa-globe"></i><a href="">http://fulstacker.github.io</a></li>
 						</ul>
