mods to contacts

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 					<div class="col-sm-4 wow bounceInUp">
 						<div class="profile-item">
 							<i class="fa fa-phone"></i>
-							<h5>425-606-3963</h5>
+							<h5>+91-988-685-7552</h5>
 						</div>
 					</div>
 
 					<div class="col-sm-4 wow bounceInRight">
 						<div class="profile-item">
 							<i class="fa fa-map-marker"></i>
-							<h5>Lemon AVE , Walnut, CA - 91789 </h5>
+							<h5>108/3 ,15th Cross , Vyalikaval, Bangalore - 03 </h5>
 						</div>
 					</div>
 
@@ -565,17 +565,17 @@
 				<div class="row">
 
 					<div class="col-md-12 headline wow bounceInLeft">
-						<h2>Contact Us</h2>
-						<p>Drop us a line or give us a ring. We love to hear you.</p>
+						<h2>Contact Me</h2>
+						<p>Drop me a line or give a ring. I would love to hear from you.</p>
 					</div>
 
 					<div class="col-md-6 wow bounceInUp">
 
-						<p>Its our passion to rediscover the art of delivering software !</p>
+						<p>Its my passion to rediscover the art of delivering software !</p>
 
 						<ul class="icon-list">
-							<li><i class="fa fa-fw fa-map-marker"></i>Lemon AVE , Walnut, CA - 91789</li>
-							<li><i class="fa fa-fw fa-phone"></i>425-998-0837</li>
+							<li><i class="fa fa-fw fa-map-marker"></i>108/3 ,15th Cross , Vyalikaval, Bangalore - 03</li>
+							<li><i class="fa fa-fw fa-phone"></i>+91-988-685-7552</li>
 							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">suresh.nelamangala@gmail.com</a></li>
 							<li><i class="fa fa-fw fa-globe"></i><a href="">http://fulstacker.github.io</a></li>
 						</ul>
