added leadship content

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 									</div>
 									<h4>Techno Managerial Leadership </h4>
 									<div class="text">
-										<p>I can help build responsive web sites using Twitter Boostrap.This web site you are viewing is built by myself using twitter bootstrap template.</p>
+										<p>I bring with me 11+ years of experience with strong software product development backgroud . I have driven grounds up implementation of open source tools based continuous delivery platform in my past assignments , done Enterprise Git Implementations and I have a management certification from IIM-C </p>
 									</div>
 								</div>
 							</div>
