--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<div class="col-sm-4 wow bounceInRight">
 						<div class="profile-item">
 							<i class="fa fa-map-marker"></i>
-							<h5>108/3 ,15th Cross , Vyalikaval, Bangalore - 03 </h5>
+							<h5>Bangalore - 03 </h5>
 						</div>
 					</div>
 
@@ -591,7 +591,7 @@
 						<p>Its my passion to rediscover the art of delivering software !</p>
 
 						<ul class="icon-list">
-							<li><i class="fa fa-fw fa-map-marker"></i>108/3 ,15th Cross , Vyalikaval, Bangalore - 03</li>
+							<li><i class="fa fa-fw fa-map-marker"></i>Bangalore - 03</li>
 							<li><i class="fa fa-fw fa-phone"></i>+91-988-685-7552</li>
 							<li><i class="fa fa-fw fa-envelope-o"></i><a href="mailto:">suresh.nelamangala@gmail.com</a></li>
 							<li><i class="fa fa-fw fa-globe"></i><a href="">http://fulstacker.github.io</a></li>
